[tool.poetry]
name = "seasight"
version = "0.1.0"
description = ""
authors = ["twt6xy <twt6xy@virginia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
tensorflow = "^2.16.1"
tensorflow-io-gcs-filesystem = "^0.31.0"
requests = "^2.31.0"
roboflow = "^1.1.23"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pre-commit = "^3.6.2"
pytest = "^8.1.1"
isort = "^5.13.2"
ruff = "^0.3.2"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
